--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.8.3",
     "firebase": "^10.1.0",
+    "pinia": "^2.1.6",
     "vue": "^3.2.13"
   },
   "devDependencies": {
