--- a/firebase.json
+++ b/firebase.json
@@ -1,10 +1,9 @@
 {
   "hosting": {
-    "public": "./",
+    "public": "dist",
     "ignore": [
       "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
+      "**/.*"
     ],
     "rewrites": [
       {
